RosalesA_VegaJ_CollinsP6A/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CADENA_ERROR
    COMA
    ERROR_LEXICO
    ID_CON_ERROR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> sentencia
Rule 4     sentencia -> declaracion
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> mostrar_stmt
Rule 7     sentencia -> leer_stmt
Rule 8     sentencia -> si_stmt
Rule 9     declaracion -> tipo ID ASIGNAR expr PUNTOCOM
Rule 10    tipo -> ENTERO
Rule 11    tipo -> CADENA_TIPO
Rule 12    tipo -> LOGICO_TIPO
Rule 13    asignacion -> ID ASIGNAR expr PUNTOCOM
Rule 14    mostrar_stmt -> MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
Rule 15    leer_stmt -> LEER PAR_IZQ ID PAR_DER PUNTOCOM
Rule 16    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
Rule 17    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
Rule 18    expr -> expr O expr_y
Rule 19    expr -> expr_y
Rule 20    expr_y -> expr_y Y expr_no
Rule 21    expr_y -> expr_no
Rule 22    expr_no -> NO expr_no
Rule 23    expr_no -> expr_rel
Rule 24    expr_rel -> expr_arit MAYOR expr_arit
Rule 25    expr_rel -> expr_arit MENOR expr_arit
Rule 26    expr_rel -> expr_arit MAYOR_IG expr_arit
Rule 27    expr_rel -> expr_arit MENOR_IG expr_arit
Rule 28    expr_rel -> expr_arit IGUAL expr_arit
Rule 29    expr_rel -> expr_arit DISTINTO expr_arit
Rule 30    expr_rel -> expr_arit
Rule 31    expr_arit -> expr_arit MAS termino
Rule 32    expr_arit -> expr_arit MENOS termino
Rule 33    expr_arit -> termino
Rule 34    termino -> termino POR factor
Rule 35    termino -> termino ENTRE factor
Rule 36    termino -> factor
Rule 37    factor -> NUMERO
Rule 38    factor -> LITERAL_CADENA
Rule 39    factor -> VERDADERO
Rule 40    factor -> FALSO
Rule 41    factor -> ID
Rule 42    factor -> PAR_IZQ expr PAR_DER
Rule 43    factor -> MENOS factor

Terminals, with rules where they appear

ASIGNAR              : 9 13
CADENA_ERROR         : 
CADENA_TIPO          : 11
COMA                 : 
DISTINTO             : 29
ENTERO               : 10
ENTRE                : 35
ERROR_LEXICO         : 
FALSO                : 40
ID                   : 9 13 15 41
ID_CON_ERROR         : 
IGUAL                : 28
LEER                 : 15
LITERAL_CADENA       : 38
LLA_DER              : 16 16 17
LLA_IZQ              : 16 16 17
LOGICO_TIPO          : 12
MAS                  : 31
MAYOR                : 24
MAYOR_IG             : 26
MENOR                : 25
MENOR_IG             : 27
MENOS                : 32 43
MOSTRAR              : 14
NO                   : 22
NUMERO               : 37
O                    : 18
PAR_DER              : 14 15 16 17 42
PAR_IZQ              : 14 15 16 17 42
POR                  : 34
PUNTOCOM             : 9 13 14 15
SI                   : 16 17
SINO                 : 16
VERDADERO            : 39
Y                    : 20
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
declaracion          : 4
expr                 : 9 13 14 16 17 18 42
expr_arit            : 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32
expr_no              : 20 21 22
expr_rel             : 23
expr_y               : 18 19 20
factor               : 34 35 36 43
leer_stmt            : 7
lista_sentencias     : 1 2 16 16 17
mostrar_stmt         : 6
programa             : 0
sentencia            : 2 3
si_stmt              : 8
termino              : 31 32 33 34 35
tipo                 : 9

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . sentencia
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . mostrar_stmt
    (7) sentencia -> . leer_stmt
    (8) sentencia -> . si_stmt
    (9) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (13) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (14) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (15) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (16) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (17) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (10) tipo -> . ENTERO
    (11) tipo -> . CADENA_TIPO
    (12) tipo -> . LOGICO_TIPO

    ID              shift and go to state 10
    MOSTRAR         shift and go to state 11
    LEER            shift and go to state 12
    SI              shift and go to state 13
    ENTERO          shift and go to state 14
    CADENA_TIPO     shift and go to state 15
    LOGICO_TIPO     shift and go to state 16

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    mostrar_stmt                   shift and go to state 6
    leer_stmt                      shift and go to state 7
    si_stmt                        shift and go to state 8
    tipo                           shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . mostrar_stmt
    (7) sentencia -> . leer_stmt
    (8) sentencia -> . si_stmt
    (9) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (13) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (14) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (15) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (16) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (17) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (10) tipo -> . ENTERO
    (11) tipo -> . CADENA_TIPO
    (12) tipo -> . LOGICO_TIPO

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    ID              shift and go to state 10
    MOSTRAR         shift and go to state 11
    LEER            shift and go to state 12
    SI              shift and go to state 13
    ENTERO          shift and go to state 14
    CADENA_TIPO     shift and go to state 15
    LOGICO_TIPO     shift and go to state 16

    sentencia                      shift and go to state 17
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    mostrar_stmt                   shift and go to state 6
    leer_stmt                      shift and go to state 7
    si_stmt                        shift and go to state 8
    tipo                           shift and go to state 9

state 3

    (3) lista_sentencias -> sentencia .

    ID              reduce using rule 3 (lista_sentencias -> sentencia .)
    MOSTRAR         reduce using rule 3 (lista_sentencias -> sentencia .)
    LEER            reduce using rule 3 (lista_sentencias -> sentencia .)
    SI              reduce using rule 3 (lista_sentencias -> sentencia .)
    ENTERO          reduce using rule 3 (lista_sentencias -> sentencia .)
    CADENA_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    LOGICO_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    $end            reduce using rule 3 (lista_sentencias -> sentencia .)
    LLA_DER         reduce using rule 3 (lista_sentencias -> sentencia .)


state 4

    (4) sentencia -> declaracion .

    ID              reduce using rule 4 (sentencia -> declaracion .)
    MOSTRAR         reduce using rule 4 (sentencia -> declaracion .)
    LEER            reduce using rule 4 (sentencia -> declaracion .)
    SI              reduce using rule 4 (sentencia -> declaracion .)
    ENTERO          reduce using rule 4 (sentencia -> declaracion .)
    CADENA_TIPO     reduce using rule 4 (sentencia -> declaracion .)
    LOGICO_TIPO     reduce using rule 4 (sentencia -> declaracion .)
    $end            reduce using rule 4 (sentencia -> declaracion .)
    LLA_DER         reduce using rule 4 (sentencia -> declaracion .)


state 5

    (5) sentencia -> asignacion .

    ID              reduce using rule 5 (sentencia -> asignacion .)
    MOSTRAR         reduce using rule 5 (sentencia -> asignacion .)
    LEER            reduce using rule 5 (sentencia -> asignacion .)
    SI              reduce using rule 5 (sentencia -> asignacion .)
    ENTERO          reduce using rule 5 (sentencia -> asignacion .)
    CADENA_TIPO     reduce using rule 5 (sentencia -> asignacion .)
    LOGICO_TIPO     reduce using rule 5 (sentencia -> asignacion .)
    $end            reduce using rule 5 (sentencia -> asignacion .)
    LLA_DER         reduce using rule 5 (sentencia -> asignacion .)


state 6

    (6) sentencia -> mostrar_stmt .

    ID              reduce using rule 6 (sentencia -> mostrar_stmt .)
    MOSTRAR         reduce using rule 6 (sentencia -> mostrar_stmt .)
    LEER            reduce using rule 6 (sentencia -> mostrar_stmt .)
    SI              reduce using rule 6 (sentencia -> mostrar_stmt .)
    ENTERO          reduce using rule 6 (sentencia -> mostrar_stmt .)
    CADENA_TIPO     reduce using rule 6 (sentencia -> mostrar_stmt .)
    LOGICO_TIPO     reduce using rule 6 (sentencia -> mostrar_stmt .)
    $end            reduce using rule 6 (sentencia -> mostrar_stmt .)
    LLA_DER         reduce using rule 6 (sentencia -> mostrar_stmt .)


state 7

    (7) sentencia -> leer_stmt .

    ID              reduce using rule 7 (sentencia -> leer_stmt .)
    MOSTRAR         reduce using rule 7 (sentencia -> leer_stmt .)
    LEER            reduce using rule 7 (sentencia -> leer_stmt .)
    SI              reduce using rule 7 (sentencia -> leer_stmt .)
    ENTERO          reduce using rule 7 (sentencia -> leer_stmt .)
    CADENA_TIPO     reduce using rule 7 (sentencia -> leer_stmt .)
    LOGICO_TIPO     reduce using rule 7 (sentencia -> leer_stmt .)
    $end            reduce using rule 7 (sentencia -> leer_stmt .)
    LLA_DER         reduce using rule 7 (sentencia -> leer_stmt .)


state 8

    (8) sentencia -> si_stmt .

    ID              reduce using rule 8 (sentencia -> si_stmt .)
    MOSTRAR         reduce using rule 8 (sentencia -> si_stmt .)
    LEER            reduce using rule 8 (sentencia -> si_stmt .)
    SI              reduce using rule 8 (sentencia -> si_stmt .)
    ENTERO          reduce using rule 8 (sentencia -> si_stmt .)
    CADENA_TIPO     reduce using rule 8 (sentencia -> si_stmt .)
    LOGICO_TIPO     reduce using rule 8 (sentencia -> si_stmt .)
    $end            reduce using rule 8 (sentencia -> si_stmt .)
    LLA_DER         reduce using rule 8 (sentencia -> si_stmt .)


state 9

    (9) declaracion -> tipo . ID ASIGNAR expr PUNTOCOM

    ID              shift and go to state 18


state 10

    (13) asignacion -> ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 19


state 11

    (14) mostrar_stmt -> MOSTRAR . PAR_IZQ expr PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 20


state 12

    (15) leer_stmt -> LEER . PAR_IZQ ID PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 21


state 13

    (16) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (17) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER

    PAR_IZQ         shift and go to state 22


state 14

    (10) tipo -> ENTERO .

    ID              reduce using rule 10 (tipo -> ENTERO .)


state 15

    (11) tipo -> CADENA_TIPO .

    ID              reduce using rule 11 (tipo -> CADENA_TIPO .)


state 16

    (12) tipo -> LOGICO_TIPO .

    ID              reduce using rule 12 (tipo -> LOGICO_TIPO .)


state 17

    (2) lista_sentencias -> lista_sentencias sentencia .

    ID              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    MOSTRAR         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LEER            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    SI              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ENTERO          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CADENA_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LOGICO_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LLA_DER         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 18

    (9) declaracion -> tipo ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 23


state 19

    (13) asignacion -> ID ASIGNAR . expr PUNTOCOM
    (18) expr -> . expr O expr_y
    (19) expr -> . expr_y
    (20) expr_y -> . expr_y Y expr_no
    (21) expr_y -> . expr_no
    (22) expr_no -> . NO expr_no
    (23) expr_no -> . expr_rel
    (24) expr_rel -> . expr_arit MAYOR expr_arit
    (25) expr_rel -> . expr_arit MENOR expr_arit
    (26) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (27) expr_rel -> . expr_arit MENOR_IG expr_arit
    (28) expr_rel -> . expr_arit IGUAL expr_arit
    (29) expr_rel -> . expr_arit DISTINTO expr_arit
    (30) expr_rel -> . expr_arit
    (31) expr_arit -> . expr_arit MAS termino
    (32) expr_arit -> . expr_arit MENOS termino
    (33) expr_arit -> . termino
    (34) termino -> . termino POR factor
    (35) termino -> . termino ENTRE factor
    (36) termino -> . factor
    (37) factor -> . NUMERO
    (38) factor -> . LITERAL_CADENA
    (39) factor -> . VERDADERO
    (40) factor -> . FALSO
    (41) factor -> . ID
    (42) factor -> . PAR_IZQ expr PAR_DER
    (43) factor -> . MENOS factor

    NO              shift and go to state 28
    NUMERO          shift and go to state 34
    LITERAL_CADENA  shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    ID              shift and go to state 24
    PAR_IZQ         shift and go to state 38
    MENOS           shift and go to state 32

    expr                           shift and go to state 25
    expr_y                         shift and go to state 26
    expr_no                        shift and go to state 27
    expr_rel                       shift and go to state 29
    expr_arit                      shift and go to state 30
    termino                        shift and go to state 31
    factor                         shift and go to state 33

state 20

    (14) mostrar_stmt -> MOSTRAR PAR_IZQ . expr PAR_DER PUNTOCOM
    (18) expr -> . expr O expr_y
    (19) expr -> . expr_y
    (20) expr_y -> . expr_y Y expr_no
    (21) expr_y -> . expr_no
    (22) expr_no -> . NO expr_no
    (23) expr_no -> . expr_rel
    (24) expr_rel -> . expr_arit MAYOR expr_arit
    (25) expr_rel -> . expr_arit MENOR expr_arit
    (26) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (27) expr_rel -> . expr_arit MENOR_IG expr_arit
    (28) expr_rel -> . expr_arit IGUAL expr_arit
    (29) expr_rel -> . expr_arit DISTINTO expr_arit
    (30) expr_rel -> . expr_arit
    (31) expr_arit -> . expr_arit MAS termino
    (32) expr_arit -> . expr_arit MENOS termino
    (33) expr_arit -> . termino
    (34) termino -> . termino POR factor
    (35) termino -> . termino ENTRE factor
    (36) termino -> . factor
    (37) factor -> . NUMERO
    (38) factor -> . LITERAL_CADENA
    (39) factor -> . VERDADERO
    (40) factor -> . FALSO
    (41) factor -> . ID
    (42) factor -> . PAR_IZQ expr PAR_DER
    (43) factor -> . MENOS factor

    NO              shift and go to state 28
    NUMERO          shift and go to state 34
    LITERAL_CADENA  shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    ID              shift and go to state 24
    PAR_IZQ         shift and go to state 38
    MENOS           shift and go to state 32

    expr                           shift and go to state 39
    expr_y                         shift and go to state 26
    expr_no                        shift and go to state 27
    expr_rel                       shift and go to state 29
    expr_arit                      shift and go to state 30
    termino                        shift and go to state 31
    factor                         shift and go to state 33

state 21

    (15) leer_stmt -> LEER PAR_IZQ . ID PAR_DER PUNTOCOM

    ID              shift and go to state 40


state 22

    (16) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (17) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (18) expr -> . expr O expr_y
    (19) expr -> . expr_y
    (20) expr_y -> . expr_y Y expr_no
    (21) expr_y -> . expr_no
    (22) expr_no -> . NO expr_no
    (23) expr_no -> . expr_rel
    (24) expr_rel -> . expr_arit MAYOR expr_arit
    (25) expr_rel -> . expr_arit MENOR expr_arit
    (26) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (27) expr_rel -> . expr_arit MENOR_IG expr_arit
    (28) expr_rel -> . expr_arit IGUAL expr_arit
    (29) expr_rel -> . expr_arit DISTINTO expr_arit
    (30) expr_rel -> . expr_arit
    (31) expr_arit -> . expr_arit MAS termino
    (32) expr_arit -> . expr_arit MENOS termino
    (33) expr_arit -> . termino
    (34) termino -> . termino POR factor
    (35) termino -> . termino ENTRE factor
    (36) termino -> . factor
    (37) factor -> . NUMERO
    (38) factor -> . LITERAL_CADENA
    (39) factor -> . VERDADERO
    (40) factor -> . FALSO
    (41) factor -> . ID
    (42) factor -> . PAR_IZQ expr PAR_DER
    (43) factor -> . MENOS factor

    NO              shift and go to state 28
    NUMERO          shift and go to state 34
    LITERAL_CADENA  shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    ID              shift and go to state 24
    PAR_IZQ         shift and go to state 38
    MENOS           shift and go to state 32

    expr                           shift and go to state 41
    expr_y                         shift and go to state 26
    expr_no                        shift and go to state 27
    expr_rel                       shift and go to state 29
    expr_arit                      shift and go to state 30
    termino                        shift and go to state 31
    factor                         shift and go to state 33

state 23

    (9) declaracion -> tipo ID ASIGNAR . expr PUNTOCOM
    (18) expr -> . expr O expr_y
    (19) expr -> . expr_y
    (20) expr_y -> . expr_y Y expr_no
    (21) expr_y -> . expr_no
    (22) expr_no -> . NO expr_no
    (23) expr_no -> . expr_rel
    (24) expr_rel -> . expr_arit MAYOR expr_arit
    (25) expr_rel -> . expr_arit MENOR expr_arit
    (26) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (27) expr_rel -> . expr_arit MENOR_IG expr_arit
    (28) expr_rel -> . expr_arit IGUAL expr_arit
    (29) expr_rel -> . expr_arit DISTINTO expr_arit
    (30) expr_rel -> . expr_arit
    (31) expr_arit -> . expr_arit MAS termino
    (32) expr_arit -> . expr_arit MENOS termino
    (33) expr_arit -> . termino
    (34) termino -> . termino POR factor
    (35) termino -> . termino ENTRE factor
    (36) termino -> . factor
    (37) factor -> . NUMERO
    (38) factor -> . LITERAL_CADENA
    (39) factor -> . VERDADERO
    (40) factor -> . FALSO
    (41) factor -> . ID
    (42) factor -> . PAR_IZQ expr PAR_DER
    (43) factor -> . MENOS factor

    NO              shift and go to state 28
    NUMERO          shift and go to state 34
    LITERAL_CADENA  shift and go to state 35
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 37
    ID              shift and go to state 24
    PAR_IZQ         shift and go to state 38
    MENOS           shift and go to state 32

    expr                           shift and go to state 42
    expr_y                         shift and go to state 26
    expr_no                        shift and go to state 27
    expr_rel                       shift and go to state 29
    expr_arit                      shift and go to state 30
    termino                        shift and go to state 31
    factor                         shift and go to state 33

state 24

    (41) factor -> ID .

    POR             reduce using rule 41 (factor -> ID .)
    ENTRE           reduce using rule 41 (factor -> ID .)
    MAYOR           reduce using rule 41 (factor -> ID .)
    MENOR           reduce using rule 41 (factor -> ID .)
    MAYOR_IG        reduce using rule 41 (factor -> ID .)
    MENOR_IG        reduce using rule 41 (factor -> ID .)
    IGUAL           reduce using rule 41 (factor -> ID .)
    DISTINTO        reduce using rule 41 (factor -> ID .)
    MAS             reduce using rule 41 (factor -> ID .)
    MENOS           reduce using rule 41 (factor -> ID .)
    Y               reduce using rule 41 (factor -> ID .)
    PUNTOCOM        reduce using rule 41 (factor -> ID .)
    O               reduce using rule 41 (factor -> ID .)
    PAR_DER         reduce using rule 41 (factor -> ID .)


state 25

    (13) asignacion -> ID ASIGNAR expr . PUNTOCOM
    (18) expr -> expr . O expr_y

    PUNTOCOM        shift and go to state 43
    O               shift and go to state 44


state 26

    (19) expr -> expr_y .
    (20) expr_y -> expr_y . Y expr_no

